添加十三经札记等
添加十三经札记等

--- a/_posts/2022-12-27-周易札记.md
+++ b/_posts/2022-12-27-周易札记.md
@@ -21,3 +21,857 @@ date: 2022-12-27 11:44:01
 ```
 在下位，则要能够承载来自上面的压力，厚德包容
 ```
+
+
+《周易》是我国上古时期的一部占筮用书。古人用阴爻（ ）、阳爻（ ）象征世界上相互对立的种种事物，每三爻叠成一卦，即所谓八卦：乾（☰）、坤（☷）、震（☳）、巽（☴）、坎（☵）、离（☲）、艮（☶）、兑（☱），象征天、地、雷、风、水、火、山、泽。八卦两两相重，就形成了六十四卦。每卦有卦辞，每一爻有爻辞，卦形及解说其所寓哲理的卦爻辞即构成《周易》的经文部分，前三十卦为上经，后三十四卦为下经；又有解说《周易》大义的《文言》《彖》《象》《系辞》《说卦》《序卦》《杂卦》七种，《彖》《象》《系辞》均分上下篇，称“十翼”，这就构成《周易》的传文部分。《周易》经传的成书年代及作者聚讼纷纭，大抵卦爻辞作于殷周之际，易传与孔子关系密切。
+《周易》也是一部富于哲学思维和人生智慧的上古奇书，它所体现的普遍联系和对立统一的思想方法，所包含的“穷则变，变则通，通则久”的发展变化思想，所蕴含的“自强不息”“厚德载物”的精神气质，对中国文化的发展产生了深远影响，在当今时代也有重要启示意义。
+本书选文据中华书局三全本《周易》。
+乾（ ）
+乾①：元，亨，利，贞②。
+①乾：卦名，下、上皆为阳，象征着“天”象的阳刚之气和刚健之行。
+②元：开始。亨：亨通。利：和谐。贞：正直。
+【译文】
+《乾》卦象征着天：是万物的开始，有亨通的力量，能和谐而有利于物，有光明正大的品格。
+初九①，潜龙②，勿用③。
+①初九：《周易》六十四卦均由初、二、三、四、五、上六个爻位组成，此处因爻位处于一卦中的开始，所以叫“初”。古人用《周易》占筮时，用“九”代表阳，用“六”代表阴。本爻为阳爻，故称
+“初九”。
+②潜龙：初九以潜伏在深水中的龙象征一个人的力量和道德还没有成长到足以发挥自己的作用。
+③勿用：龙在深水中潜伏时，因为尚未等到腾飞的时机，故宜于潜伏在下，以等待时机。
+【译文】
+初九，当龙意识到自己的力量还没有生成壮大时，就应该潜伏在深水中，不要因为有所作为而暴露自己的弱点。
+君子终日乾乾①，夕惕若厉②，无咎③。
+①君子：贵族男子的通称，后来泛指一切有才有德的人。终日：就是一整天。乾乾：勤勉而刚健。
+②惕：警惕。若：像，如。厉：危险。
+③咎：小的灾难。
+【译文】
+君子整天勤勉健进，直到夜静更深时还像遇到危险一样保持着警惕，这样，就会免于灾祸。
+九五，飞龙在天①，利见大人②。
+①九五，飞龙在天：九五在爻位上象征着君王，古人以龙比君，九为阳，为高，故以“飞龙在天”象征君王处于大有作为之时。
+②利见（xiàn）大人：见，出现。九五所应之爻在九二，九二在下，不能理解为“大人”，但是，应爻在九五，本身为九五之尊，所以宜解为“出现大人”。
+【译文】九五，当飞龙在天空自由飞腾时，此时利于出现有道德并居于高位的人。
+上九，亢龙①，有悔②。
+①亢龙：亢，过分，极度，过高。上九位于《乾》之极高之处，故曰“亢龙”。
+②悔：悔恨，这里指不幸、懊悔的事情。
+【译文】
+上九，龙飞至极高之处，就会出现悔恨之事。
+用九①，见群龙无首②，吉。
+①用九：《乾》卦特有之爻题。依古筮法，筮遇《乾》卦，六爻皆七，则以卦辞断事，六爻皆九，则以“用九”爻辞断事，用九犹言
+“通九”，是六爻皆九之意。九，纯阳之数，象征着天。
+②群龙：《乾》卦，六爻皆为纯阳，犹群龙相聚。
+【译文】
+用九，群龙相聚而没有一个以首领自居，吉利。
+《象》曰①：天行健②，君子以自强不息③。
+①象：即形象、象征之意。在《周易》中，象有二义：一是指卦形和卦爻辞，故《系辞下》曰：“《易》者，象也。”二是指“十翼”中的《象传》，旨在阐释卦象、爻象的象征意义。在这里是指第二义。《象传》又有《大象传》《小象传》之分，前者每卦一则，释上下卦象；后者每卦六则，释六爻爻象。
+②行：指天道，在这里指天体的运行。
+③君子以自强不息：指君子效法《乾》卦之“健行”之象，其立身、行事始终保持奋发图强的精神。以，介词，词后省略“之”字，可释为“依此”“像这样”（后之六十三卦《象传》中的“以”字均同此义）。
+【译文】《象传》说：天体以劲健刚强的方式运行，君子也应当像天体的运行一样自强不息。
+《文言》曰①：“元”者，善之长也②；“亨”者，嘉之会也③；“利”者，义之和也④；“贞”者，事之干也⑤。君子体仁足以长人⑥，嘉会足以合礼⑦，利物足以和义⑧，贞固足以干事
+⑨。君子行此四德者，故曰“乾：元、亨、利、贞”。
+①《文言》：又称《文言传》，为“十翼”之一，旨在文饰《乾》《坤》两卦之言辞。孔颖达《周易正义》（以下简称“《正义》”）引庄氏曰：“以《乾》《坤》德大，故特文饰以为《文言》。”
+②“元”者，善之长也：“元”是开初的生长，是生命的开始，如朱熹《周易本义》（以下简称“《本义》”）所言：“天地之德莫先于此，故于时为春，于人则为仁，而众善之长也。”
+③“亨”者，嘉之会也：《本义》曰：“亨者，生物之通，物至于此，莫不嘉美，故于时为夏，于人则为礼，而众美之会也。”嘉，嘉美。会，会合。嘉之会，即美好之聚合。
+④义：宜，适宜。
+⑤干：主干，犹言“根本”。
+⑥体：读为履，践行。
+⑦礼：礼节。李鼎祚《周易集解》（以下简称“《集解》”）引何妥曰：“礼，是交接会通之道，故以配‘通’。‘五礼’有吉、凶、宾、军、嘉，故以‘嘉’合于‘礼’也。”
+⑧义：正义，情义，善。
+⑨贞固：《本义》曰：“知正之所在，而固守之。”就是坚定地守持正义。贞，正，正义，正道。
+【译文】
+《文言》说：开初的生长，是众善之长；亨通，是美好事物的集合；有利，是“义”的和谐体；正直，是做事的根本。君子实践仁德之本，就足以为人们的尊长；会聚美好的事物，就符合“礼”；有利于物，有利于人，则足以和谐“正义”；坚守正义、正直的品德就能做成事情。君子就是能够实行这四种美德的人，所以说他们就像《乾》卦的卦象所蕴含的哲理一样，具有“元始，亨通，利人，正直”的品德。
+乐则行之①，忧则违之，确乎其不可拔②，“潜龙”也。
+①之：指示代词，这里指所乐之事，后“之”字同。
+②确乎其不可拔：初九虽潜居下位，然阳刚之德与君子之行则坚定不移。确，坚定。拔，犹言“移”。
+【译文】
+所乐于做的事就去实行，所忧愁的事就避开不去做，具有坚韧不拔的意志，这就是“潜龙”。
+庸言之信，庸行之谨①，闲邪存其诚②，善世而不伐③，德博而化④。
+①庸言之信，庸行之谨：《正义》：“从始至末，常言之信实，常行之谨慎。”庸，平常。信，真实可信。
+②闲邪：防止邪恶。闲，防，犹言“防止”。
+③善世：以美德利天下。善，美德。世，世间，天下。不伐：即不夸耀自己的好处。伐，夸耀。
+④德：道德。博：广大。
+【译文】
+平常所言必讲信用，平常的行为也很谨慎，防止邪恶而内心保持真诚，有功于人、有惠于民而从不自我夸耀，道德广大而能感化人心。
+君子进德修业①。忠信②，所以进德也。修辞立其诚③，所以居业也④。
+①进德：增进、提高道德修养。《正义》曰：“推忠于人，以信待物，人则亲而尊之，其德日进，是进德也。”修业：修美事业。
+②忠信：对朋友忠实不欺，与人言而有信。
+③修辞立其诚：修饰言辞，不妄语，不虚言。 ④居业：尚秉和《周易尚氏学》（以下简称“《尚氏学》”）曰：“居者，蓄也，积也，业以积而高大也。”居，蓄积，累积。
+【译文】
+君子要不断地增进自己的道德修养、发展事业。忠诚待人，言而有信，从而增进道德。修饰自己的言辞树立诚实可靠的形象，用以蓄积功业。
+知至至之①，可与言几也②。知终终之③，可与存义也④。
+①知至：知道事业所能达到的目标。至，达到。至之：就是达到某种地步。
+②几：事发前的征兆。《系辞下》曰：“几者，动之微也，吉凶之先见者也。”
+③知终终之：前一个“终”作名词，指事物的结果；后一个
+“终”作动词，即“以……为结果”。
+④存义：存其所适宜的行为。承上文“知至”“终之”，意指知道所能达到目标和所能得到的结果，就应当至则至，当止则止。
+【译文】
+知道自己的事业上所能达到的目标，就去努力实现它，这样的人才是可以谈论事物发展的征兆的人。能预知自己将有某种结果，而去努力奋斗得到这种结果，这样的人就可以与他共同保持适宜的状况。
+居上位而不骄，在下位而不忧，故乾乾因其时而惕①，虽危无咎矣。
+①因：随，顺。
+【译文】
+身居上位而不骄傲，身处下位而不忧愁，所以能随着时间的不断流逝而始终保持强健和警惕，即使是有危险也不会酿成灾祸。
+上下无常①，非为邪也②。进退无恒，非离群也。君子进德修业，欲及时也③，故无咎。
+①常：常规，恒定。
+②非为邪：非私心邪念之为，接下句可知进退之事因时间而定。
+③及时：赶得上、抓得住时机。
+【译文】
+君子之行，或上升，或下降，本没有什么一定不变的道理，这种行为并非出于自私的邪念。或进取，或隐退，本没有什么常规可循，这也并非要脱离群众。君子涵养道德，建功立业，就是要在需要自己的时候，抓住机会，不失时机，这样才能尽可能地避免灾祸。
+同声相应①，同气相求②；水流湿，火就燥③；云从龙，风从虎；圣人作而万物睹④。本乎天者亲上，本乎地者亲下⑤，则各从其类也⑥。
+①同声相应：阳刚之声与阳刚之声相应，九五为君，上应于天，故有同声之感应。
+②同气相求：指阴气与阴气相感应，阳气与阳气相感应。
+③就：接近。
+④圣人作而万物睹：指圣人创造卦象，使万物可被看清。作，创造。
+⑤本乎天者亲上，本乎地者亲下：《尚氏学》：“天地者，阴阳。本乎天者亲上，谓阳性上升顺行……本乎地者亲下，谓阴性下降逆行。”亲，亲近，依附。
+⑥各从其类：《本义》谓“本乎天者谓动物，本乎地者谓植物”，则同类之物本是相互依附的。
+【译文】
+相同的声音是相互感应的，同类的气息是相互吸引的；水向湿处流，火向干燥的地方烧；云随着龙吟啸而涌动，风跟随着老虎呼啸而出现；圣人创作卦的目的在于以类比的方式描绘和说明万物的情理，这样，万物就可以欣然呈现在人们的眼前。依附于天的东西本来就亲近于上，依附于地的东西本来就亲近于下，世间万物都是按照类别而相从相应。
+“终日乾乾”，与时偕行①。
+①偕：俱，全。行：运行。
+【译文】
+“整日勤勉健行”，就是为了随着时光的变动与运行而不断进取。
+大哉乾乎！刚健中正，纯粹精也①。
+①纯粹：米不杂曰“纯”，谷不杂曰“粹”。纯粹，就是不杂不变。
+【译文】
+天真是伟大啊！刚健中正，纯粹不杂，至精至诚。
+君子以成德为行①，日可见之行也②。
+①成德为行：《集解》引干宝曰：“君子之行，动静可观，进退可度。动以成德，无所苟行也。”行，行动。
+②日：副词，作状语，即每日。
+【译文】
+君子以成就美德作为自己的行为准则，每天都能使自己的道德有所增进。
+君子学以聚之①，问以辩之②，宽以居之，仁以行之③。
+①学以聚之：依靠学习来积累自己的知识。
+②问以辩之：多问才能有辨，孔子“入太庙，每事问”，故君子之于学，学则有问，问则能辨，辨而能明。辩，通“辨”。
+③仁以行之：用仁德来指导自己的行动。之，复指“仁德”。
+【译文】
+君子依靠学习来积累自己的知识，靠多向别人请教提问来辨明是非，靠胸 宽广来居于适宜的位置，靠心存仁爱来支配自己的行为。
+夫“大人”者①，与天地合其德，与日月合其明，与四时合其序，与鬼神合其吉凶②，先天而天弗违③，后天而奉天时④。
+①夫：发语词，此处无意。
+②鬼神：非真指鬼神，鬼，隐秘莫测之事；神，精灵幽妙之形。
+③先天：先于天地阴阳化物之前，这里指“道”。古人认为未有天地之前，先有天地之道。圣人能遵循“道”（即客观规律），所以
+“天”也顺着他。
+④后天：指后于天地阴阳化物。奉：遵循。故此处当解为“顺承”之意。
+【译文】
+九五之爻所称颂的“大人”，他的心灵能与天地万物沟通，能像日月的光辉一样普照大地，治理天下也能顺应四时之节序，而且还具有如“鬼神”一样隐秘幽妙的能力揭示吉凶的预兆，因为他能行先天之道，故天也不违背他，后于天道而行事，却能顺应天时四序。
+“亢”之为言也，知进而不知退，知存而不知亡，知得而不知丧①。
+①丧：失去，丧失。此处指“亢”之过极，定难持久，必有所丧失。
+【译文】
+《乾》卦之上九所说的“亢”，是在譬喻某些人只晓得进取而不知道及时隐退，只知道生存的感觉而不知道隐藏的衰亡，只知道一味地去获得利益而不知道这一切将会丧失。坤（ ）
+《象》曰：地势坤①，君子以厚德载物②。
+①地势坤：坤，下、上均为阴，为地，故地势有随顺之德。坤为顺，“坤”古字作“巛”，而“巛”为顺的借字，自《周易正义》改作“坤”。
+②厚：用如动词，在这里有增进、增厚的意思。
+【译文】
+《象传》说：广大无垠的大地包含着随顺安分的美德，君子从中悟出做人的道理，以大地之德来修养自己的品德，这样也能像大地一样包容、承载万物。
+《文言》曰：坤至柔而动也刚①，至静而德方②，后得主而有常③，含万物而化光④。坤道其顺乎，承天而时行⑤。
+①坤至柔而动也刚：《坤》虽至柔，然动而有变，变则为刚。故《集解》引《九家易》曰：“坤一变而成震（ ），阴动生阳，故‘动也刚’。”
+②至静：阴静而阳动，《坤》为纯阴之象，故曰“至静”。德方：谓《坤》之恩德因阳动而流布于四方。古人认为天圆地方，然此处含有“流布四方”之意。《集解》引荀爽曰：“坤性至静，得阳而动，布于四方也。”
+③后得主：《坤》性阴而“先迷”，动而为《震》，《震》为主持祭祀之主，故曰“后得主”，“得主”实谓从其“阳”。
+④含万物而化光：《说卦》曰“坤以藏之”，地道能藏，故曰 “含万物”，《彖传》曰“含弘光大”，《系辞上》曰“坤化万物”，化育万物，则其德光大，故曰“化光”。
+⑤承天而时行：天行其四时之节，《坤》顺承天道，故曰“承天而时行”。承，承接，顺应。而，犹言“以”。
+【译文】
+《文言》说：象征大地的坤道虽然有至阴至柔的秉性，但它的运行是刚强的。它安安静静地将它的美好品德流布于四方。以他人为主，随从在后，顺从人君，所以能保持永恒之道。大地包容万物，化育万物，使万物弘扬光大。坤道是多么的柔顺啊！它顺承天道，顺应四时之序而运行。
+积善之家必有余庆，积不善之家必有余殃。
+【译文】积德行善的家族，必有很多福庆之事；累积了很多恶劣行为的家族，必然留下许多祸殃。
+君子敬以直内，义以方外①，敬义立而德不孤②。
+①敬以直内，义以方外：以恭敬之德而使内心正直，以“仁义” 之德而形端方于外。故《正义》曰“内，谓心也。用此恭敬以直内心”，“用此义事以方正外物”。
+②德不孤：谓美德传扬，众人响应。
+【译文】
+君子以其恭敬之德而使内心正直，行为仁义则使其外形端方，树立了恭敬、仁义的品德就会在道德上不孤立。
+天地变化，草木蕃①。天地闭，贤人隐②。
+①蕃：繁衍。
+②闭：闭塞，闭塞无光、无道。
+【译文】
+天体与大地运转变化，草木繁衍茂盛。而当天地闭塞昏暗时，贤人就退避归隐。
+夫玄黄者，天地之杂也，天玄而地黄。
+【译文】
+青黄之色，就是天地之色的相互杂合，天的颜色是青蓝色的，地的颜色是黄的。
+屯（ ）
+以贵下贱，大得民也。
+【译文】
+如果能以尊贵的身份来到社会底层，就能大得民心。
+蒙（ ）
+蒙以养正，圣功也。
+【译文】
+启蒙就是培养人的正直品格，这是圣人的功德。
+君子以果行育德。
+【译文】
+君子要以果决之行来培养美德。
+师（ ）
+能以众正，可以王矣。
+【译文】
+能使兵众坚守正道、正义，就可以为君王了。
+师出以律①，否臧凶②。
+①律：法令，军纪。
+②否臧凶：军纪不严，出师必凶。否，不也；臧，善也，好也。
+否臧，即军纪不好。
+【译文】
+军旅出征必遵循国法军纪，反之，则必有凶险。
+开国承家①，小人勿用。
+①开国承家：开国，裂土以封诸侯；承家，采邑以立大夫。《集解》曰：“开国，封诸侯也。承家，立都邑也。”
+【译文】
+裂土分封诸侯，采邑赏封大夫，小人不可重用。
+泰（ ）
+天地交而万物通也，上下交而其志同也①。内阳而外阴，内健而外顺，内君子而外小人，君子道长，小人道消也②。
+①上下交而其志同也：上喻君子，下喻臣子，上下交则表明其志气相投相合。
+②君子道长，小人道消也：阳为君子，阴为小人，阴阳二气至《泰》卦时，已至于立春的时节，这时阳息而生，阴消而降，阴气已经渐渐消亡，而阳气则渐渐兴旺生长。
+【译文】
+天地交感而万物亨通，上下交感互应则人们的志气相同。内卦有阳而外卦有阴，内为刚健而外为柔顺，内为君子而外为小人，于是君子之道兴旺生长，小人之道减弱消亡。
+无平不陂①，无往不复。
+①陂：山坡。
+【译文】
+世上的事物未有平坦而无坡的情况，也没有往而不复还的情况。否（ ）
+天地不交而万物不通也①，上下不交而天下无邦也②。内阴而外阳，内柔而外刚，内小人而外君子③，小人道长，君子道消也④。
+①天地不交而万物不通也：乾居上而不降，坤居下而不升，故曰 “不交”，天地不交实为阴阳不交，阴阳不交则万物的化育就不能通畅。
+②上下不交而天下无邦也：上为君，下为臣，上下不交则天下不能成邦国。
+③“内阴而外阳”以下几句：坤为阴柔在内，乾为阳刚在外，这种情况也就象征着小人于朝内当道，君子流放在外。
+④小人道长，君子道消也：《否》有闭塞不通之象，故于小人则其道日长，于君子则其道日消。
+【译文】
+天地不能交通使得万物的生长不能通达，君臣上下不能相互交流，使得国君的天下没有邦国的辅助，阴气居内，阳气居外，柔顺者居内，刚强者居外，小人居内，君子居外，于是小人之道在增长，君子之道在消亡。
+君子以俭德辟难①，不可荣以禄。
+①以俭德辟难：即以俭为德，避开危难。
+【译文】
+君子以勤俭之德避难，不可追求荣华、俸禄。
+否终则倾，何可长也？
+【译文】
+否闭之道终极之时，就会使否道倾覆，如此则否道怎么能长久呢？
+同人（ ）
+唯君子为能通天下之志。
+【译文】
+只有君子才能通达于天下人的心志。
+君子以类族辨物①。
+①以类族辨物：按照类别的聚集来辨别事物的性质。类，用如动词，犹言“类析”。族，聚集。
+【译文】
+君子以事物的类别来辨别事物的本质特性。
+大有（ ）
+其德刚健而文明①，应乎天而时行②，是以元亨。
+①其德刚健而文明：外卦为离，离为火，火有文明之象；内卦为乾，乾有刚健之德。
+②应乎天而时行：离为日，日行天上，顺应天道，以时而行。
+【译文】
+《大有》内秉刚健之德，外著文明之光，能顺应天体的规律，按照时节运行，所以大有亨通。
+君子以遏恶扬善，顺天休命。
+【译文】
+君子遏止邪恶，弘扬善德，顺应天道，美化万物之性和政令。
+谦（ ）
+天道下济而光明①，地道卑而上行②。天道亏盈而益谦③，地道变盈而流谦④，鬼神害盈而福谦⑤，人道恶盈而好谦⑥。谦，尊而光，卑而不可逾⑦，君子之终也。
+①天道下济：“天道”有日月之行，风雨雷电，自上而下，哺育万物，故曰“下济”。
+②地道卑而上行：《正义》曰：“地体卑柔而气上行，交通于天以生万物也。”卑，地低处。上行，地气上行与天气相交。 ③天道亏盈而益谦：如日高则落，月满则亏，故曰“亏盈”；又如日出则上升，月虚则渐盈，故曰“亏盈”而“益谦”。亏，损也。
+④地道变盈而流谦：俞樾曰：“变，毁也。流，流而使之益也。”变盈，如河水满则溢，山陵高则摧。流谦，地洼则渐平，沟虚则水至。
+⑤鬼神害盈而福谦：指富裕过甚则为鬼神所忌害。《集解》引崔憬曰：“朱门之家，鬼阚其室；黍稷非馨，明德惟馨，是其义矣。”
+⑥人道恶盈而好谦：“满招损，谦受益”，此人道之所以恶盈。
+⑦卑而不可逾：这是说谦虚的人即使是身处下位，也不可为人所凌越。逾，凌越。
+【译文】
+天因为能将其光明、雨露下济于地而愈显其光明，大地的本性在于处于低底之处而地气则冉冉上升。天道的规律是亏损满盈而补益谦虚，大地的规律是改变满盈而充实谦虚，鬼神的本性是损害满盈而施福于谦虚，人类的本性是厌恶满盈而爱好谦虚。人爱好谦虚，处于尊位就光荣，即使是处于卑贱之位也不可超越，所以君子能有好的结果。
+君子以裒多益寡①，称物平施②。
+①裒（póu）：削减。益：补充，补助。
+②称物：权衡物之轻重。平施：公平地施予。
+【译文】
+君子对待事物的 度是削减过多的，补充不足的，权衡事物，然后公平地施予。
+“劳谦君子”，万民服也。
+【译文】
+“有功劳而能谦虚的君子”，天下的万民都信服他。
+豫（ ）天地以顺动，故日月不过，而四时不忒①。圣人以顺动，则刑罚清而民服。
+①四时：指四季。忒（tè）：差错。
+【译文】
+天地能按照事物的本性运动，所以日月的运转就不会出现过错，四季的更替也不会出现差错。圣人顺应事物的本性行动，那么运用刑罚就清楚分明，老百姓也就信服。
+“冥豫”在上，何可长也①？
+①何可长也：此为《豫》卦上六的《象传》，因上六处于极上之位，极则有变，故不可长。
+【译文】
+“日昏天暗还一味地耽于娱乐”，处于上位之极，怎么能够长久呢？
+随（ ）
+天下随时①，随时之义大矣哉！
+①天下随时：《随》有雷来入于泽之象，为秋天之卦。春种夏长，秋收冬藏，天下随时而动，随时而生，随时而有，随时而收，故曰“天下随时”。
+【译文】
+天下之物随从以适宜的时机，随从以适宜的时机其本身蕴涵的意义非常伟大啊！
+蛊（ ）
+君子以振民育德①。
+①振民：济民。振，救济，赈济。
+【译文】
+君子应以道德来培养百姓，拯救他们。
+不事王侯，高尚其事①。
+①不事王侯，高尚其事：前“事”字，作动词，侍奉；后“事” 字，作名词，行为，言行。
+【译文】
+不侍奉君王公侯，并把自己的行为看得很高尚。
+临（ ）
+君子以教思无穷①，容保民无疆②。
+①教：教育。《临》卦内卦为兑，兑为口，有讲习之象。思：念也，即关心。无穷：《临》卦外卦为坤，坤为地，地厚而博大，故曰
+“无穷”。
+②容：包容，宽容。无疆：上坤为地，“地行无疆”喻地之广大。
+【译文】
+君子以无穷无尽的思想道德教育民众，关心民众，并以宽厚博大的胸 容纳民众，保护民众。
+甘临①，无攸利②；既忧之，无咎③。
+①甘临：即以甜美之巧言取悦人。王弼注曰：“甘者，佞邪说媚不正之名也。”甘，美味，引申为美言。
+②无攸利：即无所利。
+③既忧之，无咎：既然已经为自己的过失感到忧虑，则终无过失。既，已经。
+【译文】靠甜美之巧言统治人民，无所得利；若已经为此感到忧虑，则无过失。
+至临①，无咎。
+①至临：至，《说文》曰：“鸟飞从高下至地也。”至临，谓以接近民众的方式统治民众。
+【译文】
+以极为亲近的方式统治民众，没有过失。
+知临①，大君之宜。
+①知：同“智”。
+【译文】
+以聪明睿智统治民众，大人君主应当这样。
+“大君之宜”，行中之谓也①。
+①行中：实行中正仁和之道。
+【译文】
+“大人君主以适宜的方式治理国家”，说明实行的是中正仁和之道。
+敦临①，吉，无咎。
+①敦：温柔敦厚。
+【译文】
+温柔敦厚地统治民众，吉祥，没有过失。
+观（ ）观天之神道①，而四时不忒②，圣人以神道设教，而天下服矣③。
+①天之神道：即天体运行时的神奇规律。
+②四时：四季。忒：差错。
+③圣人以神道设教，而天下服矣：神道，即神奇的天道。圣人悟
+“天道”之奇妙而设立教化，使天下诚心悦服。
+【译文】
+观看大自然神奇的运行规律，其春夏秋冬四季的运行不会发生差错，圣人根据神妙的天道来施行教化，使天下的百姓都能信服。
+《象》曰：风行地上①，观。先王以省方观民设教②。
+①风行地上：巽为风，坤为地，巽在坤上，即风行于地上。
+②先王以省方观民设教：先王视察天下邦国，观民风而推教化。
+方，这里指“邦国”。
+【译文】
+《象传》说：有风行于大地之上，象征着“观察民风”。先代的君王因此而视察天下邦国，观察民风，实施教化。
+九五，观我生，君子无咎①。
+①观我生，君子无咎：我，自身。生，生民，庶民。九五尊居中正之位，为《观》卦之主，观民风以察政绩得失，然后以德教正己、正民，故“无咎”。
+【译文】
+九五，观看天下生民，就可以使君子不犯错误。
+上九，观其生①，君子无咎。
+①观其生：其，犹言“彼”。生，生民。上九因居于九五之上，能观九五而自省，故“无咎”。
+【译文】
+上九，观察他所治理的百官庶民，君子就可以不犯错误。贲（ ）
+观乎天文，以察时变①；观乎人文，以化成天下②。
+①观乎天文，以察时变：天文，即日月星辰的运行，随四时即四季的变化而更替，观察天文，则可知四时之变。
+②观乎人文，以化成天下：观察人类自身具有的文明气象与文饰之道，则可知文教有化育人心的功能和作用。
+【译文】
+观察上天显示出来的文章与文明，就可以知道四季变化的规律；观察人类的文化与文明，就可以使教化成就天下万物。
+剥（ ）
+君子尚消息盈虚，天行也①。
+①君子尚消息盈虚，天行也：君子尊重大自然“消亡与生息”和 “盈满与亏虚”的客观规律。尚，尊崇，崇尚。消息，消亡与生息。盈虚，盈满与亏虚。天行，就是天道运行的规律，如春种夏长，秋收冬藏之事。
+【译文】
+君子崇尚阴虚消亡和阳盈息长的节气变化，因为这本来就是天体运行的自然规律。
+复（ ）
+复，其见天地之心乎①。
+①其见天地之心乎：阴阳的往复循环，皆为了养育万物而来，其一往一复，一动一静之间，皆有生育万物之心。动则阳生，阳生，则万物也生，以此可见“天地之心”。
+【译文】
+阳气往去复来，从中我们可以看到天地哺育万物的慈悲的心愿。
+“不远之复”，以修身也①。
+①“不远之复”，以修身也：初九之所以不远而复，在于他能在迷途未远之时，就迷途知返，这是知悔速改的表现，以此修身，则可谓善于修身。
+【译文】
+“往而不远就来回复”，这说明初九善于修身正己。
+大畜（ ）
+《彖》曰：大畜，刚健笃实①，辉光日新②。其德刚上而尚贤③，能健止，大正也④。
+①刚健：指下乾。乾体有刚健之性，故曰“刚健”。笃实：指上艮。艮为山，山有厚实、静止之德，故称“笃实”。
+②辉光：辉，用如动词，即辉耀其光荣。日新：日日增新其品德。
+③其德：指卦体所蕴涵的品格。刚上：指上九，以阳刚之德而居卦之上，故曰“刚上”。尚贤：崇尚贤者。古代贤者常隐居在山，故以山喻贤人，也是常理。艮为贤人，居于乾上，乾为君、为朝廷，贤人在朝廷之上，是国君能尊重贤人，故曰“尚贤”。
+④能健止，大正也：健，指下卦乾，乾为健；止，指上卦艮，艮为止。健而能止，故曰“大正”，若不能止，则何以“大正”。
+【译文】
+《彖传》说：大有蓄积，品格笃信诚实，行为刚健，辉耀其光芒以使品德每日都能有所增新。其道德以阳刚充满着上进之势而又崇尚贤能之士，能够刚健而有所抑止，所以宏大而正直。
+君子以多识前贤往行，以畜其德①。
+①君子以多识（zhì）前贤往行，以畜其德：君子效法“大畜”之德，故多记识前代之言、往贤之行，多闻多见，以蓄积自己的道德。
+识，通“志”，记住。
+【译文】
+君子要能多多地识记前代贤人的事迹，用来修养自己的品德。颐（ ）
+天地养万物，圣人养贤以及万民，颐之时大矣哉①！
+①颐之时大矣哉：春种夏长，秋收冬藏，万物皆生之以时，人得其养也应之以时。如失其时，则失其人，贤者隐，万民苦，故曰“时大”。
+【译文】
+天地之大能养育万物，圣人效法天地养育万物之道，颐养贤能之士及千千万万的民众，颐养贤人和百姓，其时间起着很大的作用。
+大过（ ）
+《象》曰：泽灭木，大过①。君子以独立不惧，遁世无闷
+②。
+①泽灭木，大过：上卦为兑，兑为泽；下卦为巽，巽为木；灭，淹没。泽有润木之水，然泽水“大过”，则会淹没近水的树木。
+②君子以独立不惧，遁世无闷：这句话是说，君子在衰难之时，卓尔独立，没有畏惧，隐遁于世则无所郁闷，其操行品德也不会因为
+“遁世”有所改变。
+【译文】
+《象传》说：水泽淹没了树木，这象征着“大过”。君子处在 “大过”之时，独立而无所畏惧，即使因为逃避现实世界而不为人所知也不感到郁闷。
+坎（ ）
+《象》曰：水洊至①，习坎②。君子以常德行，习教事③。
+①水洊（jiàn）至：《坎》卦上下皆为坎，坎为水，坎与坎相连，即水接连流注之象。洊，一再，接连。
+②习坎：习有重叠之义，坎为险，习坎即重重险阻之义。
+③君子以常德行，习教事：坎水接连不断地流动，“不舍昼夜”，经常如此，君子仿效这种情况，以长久的美德做事、熟习政教之事。常，用如动词，即长久地保持一种美德。习，熟习。
+【译文】
+《象传》说：水流接连不断地来到，险而又险。君子要像不断的水流一样保持持久的德行，常常地熟习政教之事。
+离（ ）
+日月丽乎天①，百谷草木丽乎土。
+①丽：附着。
+【译文】
+日月附着于天空，百谷和草木附着于土地。
+大人以继明照于四方①。
+①继明：接连不断的光明。《离》卦上下均为离，离为火，故有光明之象。
+【译文】
+大人仿效光明所具有的品德，以连续不断的光辉照耀天下四方。
+咸（ ）天地感而万物化生，圣人感人心而天下和平①。观其所感，而天地万物之情可见矣②。
+①圣人感人心而天下和平：《咸》卦上为兑，兑为少女；下为艮，艮为少男，故有阴阳感应之象；圣人因《咸》之卦象而感应到众人之心，因而以夫妇之道立天之纲纪，成人之大伦，使天下安定和睦。
+②而天地万物之情可见矣：天地之间无不从阴阳相感中生出万物来，从阴阳之道中可以见到天地生育万物的苦心。
+【译文】
+天地相互感应就会生出万物，圣人与众人的心相互感应就会使天下和睦安定。观察那些所感应的事物，天地万物之性情也就能看得见了！
+君子以虚受人。
+【译文】
+君子以虚心谦虚的美德容纳和感化众人。
+恒（ ）
+天地之道恒久而不已也。
+【译文】
+天地的规律在于持久永恒地周流不已。
+日月得天而能久照，四时变化而能久成。圣人久于其道而天下化成。观其所恒，而天地万物之情可见矣①。
+①天地万物之情可见：天长而地久，可见天地养育万物之深切情
+，故天地万物之情皆可从《恒》道中体现。
+【译文】日月在天空运行能够长久地照亮人间大地，四季的变化也有着永恒的规律。圣人长久地保持正道与美德，就会使教化大有成就。观看
+“永恒持久”的正道，就会发现天地万物的发展规律。
+君子以立不易方①。
+①易：改变。方：道也，道德，品行，这里指正道。
+【译文】
+君子应立身守节不改变正道。
+“不恒其德”，无所容也。
+【译文】
+“不能持久地保持自己的美德”，则为众人所不容。
+大壮（ ）
+正大而天地之情可见矣①！
+①正大而天地之情可见：《大壮》卦内有正直而强大的秉性，乾为天，天大，地大。宇宙万物中，阳刚为正，阴柔为不正，天正，则地正，君正则臣正，上正则下正。概观其形势，大略如此。故观“正大”之事物，可以发现天地之情。
+【译文】
+天地的运行是正直而强大的，如果我们认识到这个道，那么，就可以发现天地之性情了！
+君子以非礼弗履。
+【译文】
+君子对于“非礼”之事是不会涉及践行的。
+明夷（ ）
+《象》曰：明入地中，“明夷”。君子以莅众，用晦而明①。
+①用：以也。晦而明：坤为众、为晦，故“晦”指上卦坤，
+“明”指下卦离。
+【译文】
+《象传》说：光明隐陷入地下，这种情况就是“明夷”。君子用这一卦象蕴涵的道理来对待众人，就是以隐晦其光明的方法使自己的美德更加光明正大。
+家人（ ）
+《彖》曰：家人，女正位乎内，男正位乎外①；男女正，天地之大义也②。家人有严君焉，父母之谓也。父父，子子，兄兄，弟弟，夫夫，妇妇③，而家道正；正家而天下定矣④。
+①女正位乎内，男正位乎外：六二居内卦之中，以阴居阴，当位而正，以象其女正一家之位；九五居外卦之中，以阳居阳，当位而正，以象其男正于外。
+②男女正，天地之大义也：男女之事被看做“国之纲纪，人之大伦”。阳高阴低，男尊女卑，男主外女主内，在封建社会被看做“男女之正”，男女正则全家正，故曰“大义”。
+③“父父”以下几句：前“父”字为名词，后“父”字为动词，即尽父之责任，余同。父子、兄弟、夫妇均为一家之人，他们之间的相互关系和相处方法，实为一家之大事。
+④正家而天下定：此家非为一人之家，而是泛指人人之家，“正家”也就是使家家正，家家正则天下必然安定。
+【译文】
+《彖传》说：一家人，女子在家应处正当之位置，男子在外应处正当之位置；男女得其正当之位，这是天经地义的大道理。一家人应当有严正的君长，这指的是父母。父亲要尽父亲的责任，儿子要尽儿子的责任，兄长要尽兄长的责任，弟弟要尽弟弟的责任，丈夫要尽丈夫的责任，妻子要尽妻子的责任，这样家道才能正当适宜；家道正了天下就会随之安定。
+君子以言有物而行有恒。
+【译文】
+君子应当言之有物，行事有恒心。
+家人嗃嗃，悔厉吉；妇子嘻嘻，终吝①。
+①“家人嗃嗃（hè）”以下几句：嗃嗃，严酷的样子。嘻嘻，喜笑的样子。九三居下卦离之上，为一家之主，以阳处阳，行刚严之家政，故虽有“家人嗃嗃”，有“悔”、有“厉”，犹能保其吉祥，故曰“悔厉吉”。若“嘻嘻”笑闹，无礼节制，则终有其灾难发生。
+【译文】
+一家人相处，家主表现出严厉的样子以治其家，虽有悔恨、危险之事，而 终仍然会得到吉祥。妇人、子女在一起嘻嘻闹闹， 终则有灾难。
+威如之吉，反身之谓也①。
+①反身：反躬自省。
+【译文】
+威严之所以能得吉利，是因为有反躬自省、严以律己的品格。
+睽（ ）
+天地睽而其事同也。男女睽而其志通也。万物睽而其事类也。睽之时用大矣哉①！
+①睽之时用大矣哉：睽之于义为乖异，凡天下事同中有异，异中有同，看起来好像是对立的，然而正是这种对立统一的关系才促使事物发展进步，故当事物处在“睽之时”，其“用大矣”。
+【译文】
+天地万物皆乖异不同，但是却有相同的生长过程。男女虽有不同的生理特征，但是他们也有志气相投的时候。天下万物的形 和特性千差万别，但他们的生长过程却有着类似的地方。由此来看，乖异背离之时对于事物演变的作用还是很大的。
+君子以同而异①。
+①君子以同而异：即同中存异，异中求同。君子观《睽》而知 “合睽”之道，以存“异”之法来谋求事物之大“同”。《论语》所谓：“君子和而不同，小人同而不和。”君子对人、事的真理就在
+“同而异”，就在“和而不同”。
+【译文】
+君子要善于求大同存小异。
+蹇（ ）
+见险而能止，知矣哉①！
+①见险而能止，知矣哉：《蹇》上卦为坎，坎为险；下卦为艮，艮为止，在坎下，故卦象为遇险则止。
+【译文】
+遇见险难而能停下来，真可谓明智之举！
+《象》曰：山上有水，蹇①。君子以反身修德②。
+①山上有水，蹇：山已为险，又加之以水险，山上有水，为不能下流，人不能上行，故曰“蹇”。
+②君子以反身修德：水本应在山下，而《蹇》之水则在山上，君子观此，知水终必返于山下，而人在遇难时，也应反躬自省，修德以济险难。
+【译文】
+《象传》说：在险峻的高山有积水，这象征着行走艰难。君子因此而知要反躬自省，修养德行。
+解（ ）
+天地解而雷雨作，雷雨作而百果草木皆甲坼①。
+①雷雨作而百果草木皆甲坼（chè）：春雷震动时，雨水润泽大地，此时草木的种子皆从大地中破土而出，萌芽生长。甲，指草木出生于地上。坼，破裂。
+【译文】
+天地舒解于是就有雷雨兴起，雷雨兴起时百果草木的种子就会萌芽生长，破土而出。
+《象》曰：雷雨作，解①。君子以赦过宥罪②。
+①雷雨作，解：《解》之上卦为震，下卦为坎。震为雷，坎为雨。按卦象，则雷动于上，雨降于下，天地相解，然后“雷雨作”，所以卦名就叫做“解”。
+②君子以赦过宥（yòu）罪：宥，宽宥，宽恕。按《象传》以雷比刑，以雨比德泽。雷动于上，雨降于下，比喻刑罚之下有德泽。君子观此则知“赦过宥罪”为“解”之大义。
+【译文】
+《象传》说：雷雨兴起，百果草木就会从土地中“舒解”出来。
+君子因此赦免别人的过失，宽宥他人的罪恶。
+损（ ）
+损益盈虚，与时偕行①。
+①损益盈虚，与时偕行：减损、增益、盈满、亏虚之事，皆有其时，以时损益则为变通，故《系辞下》曰：“变通者，趋时者也。” 损益以时，则能变通，如满盈时，则损而有益，若亏虚时，则损而无益；夏宜损阳而滋阴，冬宜益阳而不损。故损之道须“与时偕行”。
+【译文】
+世上的减损、增益、盈满、亏虚要符合事物发展的规律，必须在适宜时间进行。
+君子以惩忿窒欲①。
+①惩：止住。忿：同“愤”。窒：堵塞，窒息。
+【译文】
+君子要抑止愤怒，堵塞邪恶的欲望。
+一人行，三则疑也。
+【译文】
+一人独自出行能专心致志，而三人同行会因意见不一致而疑惑。
+益（ ）
+损上益下，民说无疆①；自上下下，其道大光②。
+①说：通“悦”。
+②自上下下，其道大光：上，指九五，九五能降恩惠于下，则益道广大。
+【译文】
+减损于上，增益于下，这样民众就会有无边无际的欢悦；从上面将恩惠降到下面的臣民，这样为君之道也就发扬光大了。
+益动而巽，日进无疆①；天施地生，其益无方②。凡益之道，与时偕行。
+①益动而巽，日进无疆：《益》之下卦为震，上卦为巽，故曰
+“动而巽”；以雷动之威，风行之速，则“进无疆”。
+②天施地生，其益无方：天施恩泽于地，地受恩泽而生物，天道无私，故无所不益，其所益不分地域、物类，故曰“天施地生，其益无方”。
+【译文】
+增益是以雷厉风行的方式进行的，所以每日都会不断增长；上天广施恩惠，大地才能生出万物，而来自上天的恩惠是遍及万方万物的。凡是增益的道理和方法，都要顺应适当的时间来进行。
+君子以见善则迁①，有过则改。
+①见善则迁：即《论语》所谓“见贤则思其齐焉”。迁，迁移。
+【译文】
+君子看见美好的行为就心向往之，有过错就迅速改正。
+姤（ ）
+天地相遇，品物咸章也①。
+①天地相遇，品物咸章也：《姤》自《乾》（ ）来，初六为阴，阴为坤，乾为天，坤为地，故《姤》处天地相遇之时、之地，此时为夏季，天下万物都极兴旺繁荣，故曰“品物咸章”。品，众多。
+咸，皆，都。章，通“彰”，显著。
+【译文】
+天地阴阳之气相遇在一起，万物都会昭彰显明地表现出来。
+升（ ）
+《象》曰：地中生木，升①。君子以顺德，积小以高大②。
+①地中生木，升：坤为地，巽为木，地中生木，从小至大，每日每时都在生长，时时有上升之象。
+②君子以顺德，积小以高大：巽为入，坤为顺，入于顺。据卦象而言，升有“顺”德而后升。木生由小到大，人做事也要从小事做起，然后才能成就大业，故曰“积小以高大”。
+【译文】
+《象传》说：地中生长出草木，这种情境象征着“上升”。君子以“顺”为美德，积累小善以成就崇高伟大的事业。困（ ）
+险以说，因而不失其所亨①，其唯君子乎！
+①险以说，因而不失其所亨：《困》之卦象为上坎下兑，上为坎，坎为险；下为兑，兑为悦。历险而上至于愉悦之境，唯大德之君子能如此而不失其“所亨”。
+【译文】
+面临着险境而心中愉悦，因而不会失去亨通的前景，这样的胸襟和气度大概只有君子才能做到！
+《象》曰：泽无水，困①。君子以致命遂志②。
+①泽无水，困：水本应在泽上，而《困》则水在下，故有水困于泽下之象。
+②君子以致命遂志：君子誓死守道，虽遭受困厄之世，也当不屈其志向，以志向为生命，不惜以生命为代价来实现自己的志向，故曰
+“致命遂志”。
+【译文】
+《象传》说：泽上无水，象征着困穷。君子在此时应当以不惜牺牲生命的坚强意志去实现自己崇高的志向。
+革（ ）革而当，其悔乃亡。天地革而四时成，汤武革命，顺乎天而应乎人①。革之时大矣哉②！
+①汤武革命，顺乎天而应乎人：汤，指商汤，本为夏桀之臣；武，指周武王，为纣王之臣；因夏桀、殷纣王暴虐荒淫，昏庸无道，汤、武顺天道人心而革之。史称“汤武革命”。
+②革之时大矣哉：天地的变革形成了四时的变化，顺应了万物的生长；社会的革命上合天道，下顺人心，成就了安民定邦的伟业，故曰“革之时大矣哉”。
+【译文】
+变革合乎正当之理，其悔恨也因此而随之消逝。天地变革导致四季形成，商汤、周武王变革了夏桀、殷纣的王命，这是顺乎天道又合乎民心的大变革，所以说变革之时的意义是多么巨大啊！
+“小人革面”，顺以从君也①。
+①“小人革面”，顺以从君也：若小人则只能变其颜面，以容色顺上，故曰“顺以从君”。
+【译文】
+“小人的变革则只是改变其颜面”，这说明小人的变革只是从表面上顺从君王而已。
+震（ ）
+《象》曰：洊雷，震①。君子以恐惧修省②。
+①洊（jiàn）雷，震：上下皆震，如雷之相连，故曰“洊雷”。洊，一再，接连。
+②君子以恐惧修省：雷声接连而来，震惊百里的威力使君子也内恐惧，加强修身。
+【译文】
+《象传》说：雷声接着雷声，这就是雷声震动的样子。君子因此而恐惧天威，修身以德，反省过失。
+艮（ ）
+时止则止，时行则行，动静不失其时，其道光明①。
+①其道：即《艮》卦的道理，艮为止，故为抑止的道理。
+【译文】
+时机应当静止就静止，时机应当行动就行动，静止与行动都不要丧失合适的时机，如此则抑止的道理就会光明灿烂。
+君子以思不出其位。
+【译文】
+君子所思考的事情应当不超出自己所处的社会地位。
+艮其辅①，言有序②，悔亡。
+①艮其辅：即抑制嘴巴，不乱说话。辅，上牙床，这里借指口。
+②言有序：说话有条理。序，条理。
+【译文】
+抑止其口不使妄语，言则有序，悔恨就消失了。
+归妹（ ）
+《彖》曰：归妹，天地之大义也。天地不交而万物不兴。归妹，人之终始也①。
+①人之终始：终始，即终而复始。有“归妹”，然后有阴阳和合，男女相配，阴阳和合，才能生育子女，故曰“人之终始”。
+【译文】
+《彖传》说：少女出嫁，这是天地之间以阴顺阳的大道理。天地阴阳不相交合，万物就不会兴旺。少女出嫁，人类就可以终而复始地繁衍生息。
+丰（ ）
+日中则昃，月盈则食①；天地盈虚，与时消息，而况于人乎？况于鬼神乎？
+①日中则昃（zè），月盈则食：这里所说的是一种自然现象，即太阳行至正午时就会逐渐向西偏斜，月亮满盈时就渐趋亏损。昃，倾斜。食，亏损。
+【译文】
+太阳升到正中时就会逐渐西斜，月亮满盈时就会亏损；天地之间存在着满盈和亏虚，它们都将随着时间而消亡、生息，又何况人呢？又何况鬼神呢？
+兑（ ）
+说以先民，民忘其劳；说以犯难，民忘其死①。说之大，民劝矣哉②！
+①“说以先民”以下几句：指君子当先民而劳则民忘其劳，先民而犯难则民忘其死。先，引导，率领。犯难，即挑战危难。
+②劝：勉励。
+【译文】
+大人君子以愉悦之情、不辞劳苦地率领民众，民众就会忘记自己的劳苦跟随他；大人君子以愉悦的 度迎接危难的挑战，民众就会舍生忘死地跟随他。愉悦的意义是宏大的，民众就是因此而获得勉励啊！
+君子以朋友讲习。
+【译文】
+君子要和朋友一起讲论道理，研习学业。
+节（ ）
+说以行险①，当位以节，中正以通。天地节而四时成。节以制度，不伤财，不害民②。
+①说：通“悦”，愉悦。
+②“节以制度”以下几句：君王能以制度节制国民，则不会损伤国家的财源，也不会伤害民众的利益。《说文》：“制，裁也。” 度，尺度，制度。
+【译文】
+以愉悦的心情经历险情，居于正当之位而行节制之道，处在中正之位行事必然亨通。天地因受到节制而形成四季变化。君王若以典章制度、度量尺度为节制，则不会损伤财产，也不会伤害民众。
+既济（ ）
+君子以思患而豫防之①。
+①豫：读为预，即事前，预先。
+【译文】
+君子考虑可能出现的祸患而预先做好防备。
+未济（ ）
+君子以慎辨物居方①。
+①辨：分辨。居：处于，此处有安置之意。方：犹“所”，即所居之“所”。
+【译文】
+君子要认真谨慎地分辨事物，使它们能各就其适当的位置。
+系辞上
+天尊地卑，乾坤定矣①。卑高以陈，贵贱位矣②。动静有常，刚柔断矣③。
+①天尊地卑，乾坤定矣：《易》含万象，天应乾象，地应坤象。乾坤为天下万物之门户，所以《系辞》先从天地讲起。天以刚阳而尊，地以柔阴而卑。《易纬乾凿度》曰：“清轻者上为天，浊重者下为地。”乾健与天阳同，坤顺与地阴同，天地相分，则乾坤之体各有定分。
+②卑高以陈，贵贱位矣：天高则为贵，地卑则为贱，天高地卑之势陈列后，人们也就按照这种情形确立人类中的贵贱位置。以，同
+“已”。陈，陈列。位，定位。
+③动静有常，刚柔断矣：古人认为乾体刚健而常动，坤体阴柔而常静，则阳刚与阴柔也就在乾坤中判然分明。断，《集解》引虞翻曰
+“断，分也”。
+【译文】
+天尊贵而地卑下，这样，乾坤的位置就确定了。当卑下与高贵陈列出来时，高贵与卑贱也就随之有了各自的位置。天地之间一动一静都有一定的规律性，阳刚与阴柔也因此得以分断清楚。
+方以类聚，物以群分。
+【译文】
+天下的事物各以其类别聚集，各种动物、生物也以其不同的群体而区分。
+乾以易知，坤以简能①；易则易知，简则易从②；易知则有亲，易从则有功③；有亲则可久，有功则可大④；可久则贤人之德，可大则贤人之业。易简而天下之理得矣⑤。天下之理得，而成位乎其中矣⑥。
+①乾以易知，坤以简能：乾为首，光明正大，故能具有智慧，故曰“乾以易知”；坤因简约而有所作为，故曰“坤以简能”。《老子》所谓“天得一而清，地得一而宁”，“一”为世间平易、简约之极，所以才能有“知”有“能”。易，平易，简约。知，通“智”。
+②易则易知，简则易从：天道平易则容易为人所感知，地道简约则容易为人所遵循。从，遵从。
+③易知则有亲，易从则有功：易于为人所知则人感其亲切，容易为人所遵从则可以建立功业。亲，亲近。功，建功，有为。
+④有亲则可久，有功则可大：阴阳相和则有亲，有亲相得，则生生不息，故可以长久；阴阳相合则生成万物，载物众多，繁衍不已，故曰“可大”。
+⑤易简而天下之理得：天地皆以“易”“简”而有亲、有知、有化、有功，故曰“易简”。《列子》云：“不生者能生生，不化者能化化。”简易之道实际上就是天地之道，若知“易简”则能通天下之理，故曰“天下之理得”。
+⑥而成位乎其中：象成则阴阳、贵贱、刚柔就可以定位其象于天地之中。成，确立。位，定位。
+【译文】
+乾以其平易而充满智慧，坤以其简易而大有作为；事情只有平易才会使人容易明白，事情只有简易才会使人容易随从；容易为人所知就会有人亲近，容易随从就能建立功业；有人亲近则可以立身长久，建立功业就可立身宏大；立身长久是贤人的美德，立身宏大是贤人的事业。若能明白乾坤的平易与简约，那么，就会晓得天下的道理。晓得了天下的道理后，就能将刚柔、阴阳、贵贱安排在适宜的位置。
+与天地相似，故不违①；知周乎万物，而道济天下，故不过②；旁行而不流③，乐天知命，故不忧；安土敦乎仁，故能爱
+④。
+①与天地相似，故不违：谓圣人之德与天地相似，是顺应而不是违背天地自然之理。不违，即不违背自然规律。
+②“知周乎万物”以下几句：圣人因通《周易》之理，广知天下万物之理，就能以其真理成就天下万物，所以没有过失。
+③旁行而不流：指圣人处事旁通而不流于滥淫。 ④安土敦乎仁，故能爱：指圣人能安分于所处的环境，敦厚其仁爱之心，博爱天下之人。安，安于所居之地。敦，敦厚，仁爱。
+【译文】
+明白了《周易》所含的道理与天地之间的道理相类似，做起事来就不会违背自然规律；知识能通晓万物之理，就会运用其中的道理成就天下的事业，行为也不会有大的过失；处事应变旁通而不流于滥淫，安于天道，知其天命之变数，就没有忧愁；安分于所处的环境并敦厚其仁爱之心，所以能博爱天下之人。
+一阴一阳之谓道①，继之者善也②，成之者性也③。仁者见之谓之仁，知者见之谓之知，百姓日用而不知，故君子之道鲜矣④。
+①一阴一阳之谓道：道，指事物发展的客观规律性。一阴一阳，谓对立矛盾，二者即相互依存，又互相转化，它们贯穿于整个事物的发展变化之中，故以“道”名之。
+②继之者善：善美者能继，故曰“继之者善”。继，承继，连续。
+③成之者性：欲成就其物就不能违背其本性，故曰“成之者性”。性，谓本质属性。
+④君子之道鲜：君子之道，通达兼容，故能知者少。鲜，少，不多。
+【译文】
+一阴一阳的矛盾对立和变化统一就是事物发展的“道”，继承这个“道”的是美善，而成就这个“道”的则是事物内在的固有本质。有仁爱之心的人从这个“道”中发现的只是“仁爱”，有智慧的人从这个“道”中发现的只有“智慧”，百姓在日常生活中每天都在运用此“道”却茫然不知，所以通达兼容的君子之“道”就更少为人所知了。
+富有之谓大业①，日新之谓盛德②。
+①富有之谓大业：圣人效法天地阴阳之道，广大悉备，万事富有，所以谓之“大业”。 ②日新之谓盛德：圣人旁通变化，又日日增新其德，所以德能盛极，故谓之“盛德”。
+【译文】
+富有万事万物就可以称作是“大事业”，每日都能使事物有新的面貌，这就是“道”育万物的盛大美德。
+生生之谓易①。
+①生生之谓易：前死而后生，新陈代谢，变化不已，生生不已，变化改易，此皆得之于阴阳转变之中。生生，生而不绝之义。易，变易。
+【译文】
+生生不灭就是阴阳相互转化产生的“变易”。
+言天下之至赜而不可恶也①，言天下之至动而不可乱也②。
+①言天下之至赜而不可恶：即论述天下深奥的道理不可以有轻视厌恶的 度。言，论述。恶，厌恶。
+②至动：谓天下 复杂深刻的变动。不可乱：即不可妄谈乱说。
+【译文】
+论说天下幽深微妙的道理，不可以有鄙贱轻恶的 度；论说天下复杂的变化和运动，不可以妄谈乱说。
+言出乎身，加乎民①；行发乎迩，见乎远。言行，君子之枢机②。枢机之发，荣辱之主也③。言行，君子之所以动天地也，可不慎乎④？
+①言出乎身，加乎民：圣人的言论出于自身，施加于民众，故不可不慎。
+②枢机：谓弩弓之枢机。弩弓正中有臂，臂之下端置机，名曰弩机。弩机以铁制成小匣，中有枢柱与其他机件相连。射击时发动枢柱，箭即发出，故曰枢机。《易传》的作者以“枢机”来比喻言行之所发。 ③枢机之发，荣辱之主也：放箭是“开弓没有回头箭”，发言也是如此，说出的话再也无法收回，箭或中或否，犹如发言之或得或失，得则荣至，失则辱来，关乎荣辱。
+④君子之所以动天地也，可不慎乎：指君子用“言行”来鼓动天地万物，所以君子不可不慎。
+【译文】
+言论出于自身，要施加于民众；行动在近处开始，远方的人也能看见。言行，犹如君子处世的枢机。枢机的开启，是荣与辱的关键。
+言行，是君子用来鼓动天地万物的工具，怎么可以不谨慎呢？
+君子之道，或出或处①，或默或语。
+①或：这里指“有时”。出：出动。处：安处。
+【译文】
+君子为人处事的方法，有时要出门行动，有时要安静地处在自己所处的环境，有时要保持沉默，有时要发表意见。
+二人同心，其利断金①。同心之言，其臭如兰②。
+①二人同心，其利断金：此二句言二人同心，则无物不胜。以断金之利赞“同心”之善。利，锋利。断金，斩断金属。
+②臭：气味。如兰：喻香馥如兰。
+【译文】
+若两个人能同心同德，其力量就可以如切断金属的利刃一样强有力。心意相同而说出的话，其气味如同兰草一样芬芳。
+劳而不伐①，有功而不德②，厚之至也。语以其功下人者也
+③。
+①伐：自我夸耀。
+②德：自以为有功德。
+③语以其功下人者：指“劳谦君子”虽有其功，然甘居人下。【译文】
+有功劳而不夸耀，有功德而不居功自傲，真可谓是仁厚至极。这说明君子有功德而又能甘居人下。
+德言盛，礼言恭；谦也者，致恭以存其位者也①。
+①谦也者，致恭以存其位者也：此句言谦虚之德在于致其恭敬，以存其位。
+【译文】
+道德贵在盛大，礼节贵在恭敬；而谦虚的含义，就在于对人恭敬以保存自己的地位。
+“亢龙有悔①。”子曰：“贵而无位，高而无民，贤人在下位而无辅，是以动而有悔也。”
+①亢龙有悔：此句引自《乾》之上九爻辞。
+【译文】
+《乾》之上九说：“巨龙飞得过高就会招致悔恨。”孔子说： “身居高贵之处而没有得到适当的位置，就会因为过高而脱离民众、失去民心，贤明的人处在下位而得不到帮助，所以行动起来就会有悔恨。”
+乱之所生也，则言语以为阶①。君不密则失臣，臣不密则失身，几事不密则害成②。是以君子慎密而不出也。
+①乱之所生也，则言语以为阶：祸从口出，乱之所生，皆因言语不当所致。阶，阶梯。
+②几：事之初。“几事”即“办事之始”。害成：有害于事成。
+【译文】
+危险与动乱的产生，往往是因为言语不谨慎所致。君王不谨慎就会失去大臣的拥护，大臣不谨慎就会失去生命，办事开始时不谨慎就会危害事情的成功。所以君子谨慎缜密而不轻易发言。
+上慢下暴，盗思伐之矣①。慢藏诲盗②，冶容诲淫③。
+①上慢下暴，盗思伐之矣：若君上骄惰，下民强暴，则“盗寇思伐之”。此句为推论国家“致寇至”的原因。慢，《说文》：“慢，惰也。”暴，强暴。
+②慢藏诲盗：懒于收藏财物就会引诱强盗来盗。此句为推论个人
+“致寇至”的原因。诲，引诱，诱发。
+③冶容诲淫：把容貌打扮得妖媚艳丽，就会引诱淫者来淫。此句为推论女子“致寇至”的原因。冶，妖冶，艳丽，这里指打扮得妖媚。
+【译文】
+处在上位的人懈怠侮慢而处在下位的人骄横暴虐，就会招致强盗的侵伐。怠慢而不藏好财物就会引来盗贼，将体 装扮得妖冶艳丽，就会诱发淫荡之心。
+夫《易》，圣人之所以极深而研几也①。唯深也，故能通天下之志；唯几也，故能成天下之务；唯神也，故不疾而速，不行而至②。
+①圣人之所以极深而研几：此言圣人穷究《易》理之深奥及其 “几微”之变化。几，《释文》引郑玄曰：“几，微也。”这里指
+《易》理的微妙之处。
+②不疾而速，不行而至：《正义》曰：“无思无为，寂然不动，感而遂通，故不须急疾而事速成，不须行动而理自至也。”《易》道如神，不疾就能速成，不行就能达到目的。疾，《广雅·释诂》：
+“疾，急也。”
+【译文】
+《易》，是圣人用来探究极为精深的道理、研习极其微妙的变化的一部书。只有穷究精深的道理，才能会通天下的心志；只有研习微妙的变化，才能成就天下之事务；只有掌握《易》道的神妙，才能不用急急忙忙地办事，而能迅速地办成事情，不用亲自行动，吉祥的结果就会自然到来。
+《易》有太极①，是生两仪②。两仪生四象③。四象生八卦
+④。
+①太极：宇宙之本体。老子名之曰“一”，《吕氏春秋·大乐》名之曰“太一”。因为《系辞》作者认为《易》包含着宇宙间 为根本的道理，象征着万物生成之本原，包括天地之 大、 高之物，故称为“太极”。
+②是生两仪：两仪，即天地之法，宇宙之本体太极变而为二仪，一为天，一为地，故曰：“是生两仪。”仪，法。《国语·周语》：
+“百官轨仪。”韦昭注：“仪，法也。”
+③两仪生四象：四象，指四季之象，有天地然后生四时，故曰 “两仪生四象”。按筮法说，则蓍草七揲为少阳之爻，以象征春天；由春往夏，还是阳气增长之时，故七揲为不变之阳爻。蓍草九揲为老阳之爻，以象征夏天；由夏往秋，是由阳气变阴气时，所以九揲为可变之阳爻。蓍草八揲为少阴之爻，以象征秋天；由秋往冬，是阴气增长之时，所以八揲为不变之阴爻。蓍草六揲为老阴之爻，以象征冬天；由冬往春，是由阴变阳之时，故六揲为可变之阴爻。少阳、老阳、少阴、老阴四种爻象以象征四时。
+④四象生八卦：八卦由少阳、老阳、少阴、老阴四种爻构成，故曰“四象生八卦”。
+【译文】
+《周易》包含有宇宙生成的本体“太极”，由它生成天地阴阳 “两仪”，由两仪生成象征四时的四种爻象，再由这四种爻象生成象征着天、地、雷、风、水、火、山、泽八种符号的八卦。
+天之所助者，顺也；人之所助者，信也。履信思乎顺①，又以尚贤也。
+①履：履行，践行。信：诚信。
+【译文】
+上天所帮助的人，是那些顺从正道的人；人所帮助的人，是那些笃实守信的人。能够履行诚信的人也就时时想着要顺从正道，又能以这种诚信的 度去尊重崇尚有贤德的人。
+书不尽言，言不尽意。
+【译文】
+书面上的文字不能完全表达作者想要说的话，而作者说出的话也不能完全表达其所思所想。
+形而上者谓之道，形而下者谓之器①。
+①形而上者谓之道，形而下者谓之器：道，道理，客观规律，此处指思想意识。器，器物。形而上者，谓处于实有形体之上的思想意识、理论方法、制度等。形而下者，如天地、动物、植物、器械等。《集解》李道平疏曰：“形而上者，无形者也，故谓之道。形而下者，有形者也，故谓之器。”
+【译文】
+居于形体之上的意识形 叫做“道理”，而处在形体之下的客观物质叫做“器物”。
+系辞下
+天地之大德曰生①，圣人之大宝曰位②。何以守位？曰仁。
+何以聚人？曰财。理财正辞③，禁民为非曰义。
+①天地之大德曰生：天地生育万物，故称其“德大”。
+②圣人之大宝曰位：“不在其位，不谋其政”，圣人因有位而有政权，有政权则能建功业；无位则无政权，无政权则不能建功业。所以正当适宜之位是圣人之大宝。
+③理财：指圣人治理财政，用之以节。正辞：指正定号令之辞。
+辞，制度法令之条文。
+【译文】
+天地的宏大恩德是生养万物，圣人的重大珍宝在于得到适宜的位置。用什么来坚守重要的位置呢？应当是仁爱之心。用什么来聚集人呢？应当是财物。治理财政，正定号令，禁止民众为非作歹就是“道义”。
+《易》穷则变，变则通，通则久。
+【译文】
+《周易》中蕴涵的道理是事物发展到穷极时就促使其变化，变化后就能使事物达到通顺，通顺了就能长久。
+天下同归而殊途，一致而百虑①。
+①天下同归而殊途，一致而百虑：谓天下人同归于一地，而所走的道路却多异；有同样的目标，而 抱的想法却有百种之多。殊，异。涂，同“途”，道路。致，同“至”，此指目的。
+【译文】
+天下的人都有一个共同的归宿，只不过是走着不同的道路而已；虽然人们的愿望与目的有着一致性，但实现这些目的与愿望的想法却很多不相同。
+日往则月来，月往则日来，日月相推而明生焉。寒往则暑来，暑往则寒来，寒暑相推而岁成焉。往者屈也，来者信也，屈信相感而利生焉①。尺蠖之屈，以求信也②；龙蛇之蛰，以存身也③。
+①“往者屈也”以下几句：往者屈而退，来者伸而进，屈伸相感交替，而后有利于物，有利于人。屈，弯曲。信，通“伸”，伸展。
+②尺蠖（huò）之屈，以求信也：《正义》曰：“初行必屈者，欲求在后之信也。言信必须屈，屈以求信，是相须也。”也就是说，尺蠖蜷屈时，实际上为了求得更进一步的伸展。蠖，是一种生活在树上的虫子，行进时一屈一伸，如用尺量布，故称为“尺蠖”。信，通
+“伸”。
+③龙蛇之蛰，以存身也：龙蛇在蛰伏时，是处于静止的状 ，然而，这种静止是为了保存自己，求得更好的动。蛰，蛰伏。《集解》引虞翻曰：“蛰，潜藏也。”
+【译文】
+譬如太阳西下后月亮就要升起来，月亮落下山太阳就从东方升起来，太阳和月亮相互推移就产生了光明。寒季去了暑季就要到来，暑季去了寒季就会到来，寒季与暑季相互推移就形成了年岁。“过去的”就屈着身子，“到来的”则伸直身子，屈与伸相互感应则有利的因素就从中产生了。尺蠖之虫在蜷屈身子时，为的是求得伸展身子；龙蛇在处于蛰伏时，是为保存自己，以便更好地动。
+精义入神①，以致用也；利用安身②，以崇德也③。过此以往，未之或知也④；穷神知化⑤，德之盛也。
+①精义：精研事物之义理。入神：进入神妙之境地。
+②利用：利用其所学。
+③崇德：提高才德。
+④过此以往，未之或知也：过此，指上述往来、屈伸、学用之事。以往，即超出上述所叙之事。因为“入神”“安身”已经是人生很难达到的境界，超过这种境界则圣人也不可知。
+⑤穷神：穷究事物之神妙。知化：认识事物之变化。
+【译文】
+精研事物的道理，并使其进入到神妙的境界，就是为了这种学识能得到有效的使用；利用精研的学识安身立命，提高自己的道德修养。超过这些境界再往前发展，大概就不是我能知道的了；穷究事物的神妙，了解事物的变化，才能算得上是伟大的道德。
+君子藏器于身，待时而动，何不利之有？动而不括①，是以出而有获，语成器而动者也。
+①括：阻碍，闭塞。
+【译文】
+君子随身藏着器具，等待合适的时机而采取行动，有什么不利的呢？有所行动而不会受到塞结阻碍，所以能够出动就有所收获，这说明人备有可用之器具才能采取行动。
+小人不耻不仁，不畏不义，不见利不劝①，不威不惩②。小惩而大诫，此小人之福也③。
+①不见利不劝：言小人不见其利则不知勉励自己。劝，《说文》：“劝，勉也。”即努力。
+②不威不惩：不临之以威刑则不知克制。威，临之以刑威。惩，克制。
+③小惩而大诫，此小人之福也：指受小惩罚以警惕大事，小人将因此而得福。
+【译文】
+小人不以不讲仁爱为耻，不怕做不合道义之事，不见到有利可图就不会勉励自己，不受到刑罚的威胁就不知道有所克制。直到受到小的惩罚后才会在大事上有所警惕，这是小人的幸运。
+善不积不足以成名，恶不积不足以灭身。
+【译文】
+不积累美善之行就不足以成就功名，不积累罪恶就不足以使自己灭亡。
+小人以小善为无益而弗为也，以小恶为无伤而弗去也，故恶积而不可掩，罪大而不可解。
+【译文】
+小人认为小的善事无益于己而不去做，认为小的恶事无伤大体而不停下来不做，所以恶行积累到无法遮掩的地步，罪恶大到不能得到解脱的程度。
+危者，安其位者也；亡者，保其存者也；乱者，有其治者也①。是故君子安而不忘危，存而不忘亡，治而不忘乱，是以身安而国家可保也②。
+①“危者”以下几句：意谓统治者唯有知危，才能安坐其位；唯有知有亡乱之祸而防备之，才能保持自身的存在；唯有知乱之所以生，才能思而治之。 ②“是故君子安而不忘危”以下几句：因为安、存、治可转变为危、亡、乱，若君子处安、存、治之境，警惕危、亡、乱之来，则可免于危、亡、乱之祸。
+【译文】
+危险，可以提醒人们如何安居其位；灭亡，可以提醒人们如何保持存在；动乱，可以提醒人们如何维持治世。所以君子应该在安居其位时不忘记危险的存在，在家国存在时不忘记有可能会遭受灭亡，在天下大治时不忘记会有动乱的隐患，这样，自身才可能安居其位，国家才能保持长久。
+德薄而位尊，知小而谋大，力少而任重，鲜不及矣①。
+①鲜：少。及：这里指遭受灾祸。
+【译文】
+德行微薄而地位尊贵，智慧微小而企图很大，力量微弱而任务重大，很少有不遭受灾祸的。
+知几其神乎！君子上交不谄，下交不渎，其知几乎？几者①，动之微，吉之先见者也。君子见几而作，不俟终日。
+①几：微妙，细微。
+【译文】
+人若能察知微妙的事理大概就达到了神明的境界了吧！君子与处在上层的人士交往而不谄媚，与处在下层的人士交往而不轻视、怠慢，大概就能算得上是察知微妙之事吧？几，是指事物变动中微小的征兆，是吉凶征兆的预先显现。君子发现这些微妙的征兆后就立即开始行动，一天也不敢耽搁啊。
+君子知微知彰，知柔知刚，万夫之望①。
+①“君子知微知彰”以下几句：言君子既知隐微、彰显之事，又知刚柔之宜，则能知吉凶，故为万夫所仰望。微，隐微。彰，明显。
+望，仰望。
+【译文】君子既能知道隐微之事，也能知道彰显之事；既能知道阴柔之理，也能知道阳刚之德，这样就可以得到万民的仰望。
+颜氏之子①，其殆庶几乎②？有不善未尝不知，知之未尝复行也。
+①颜氏之子：指颜回，孔子 得意的学生，孔子称其“不迁怒，不贰过”（《论语·雍也》）。
+②殆：大概，可能，也许。庶几：差不多，接近。
+【译文】
+颜家的儿子颜回，大概算得上是道德上近于完美的贤能之士了吧？自己有什么不好的地方，没有不知道的，知道了就不再重复错误了。
+天地 缊，万物化醇①；男女构精②，万物化生。
+①天地 缊，万物化醇：天之阳气与地之阴气交融，则万物之化育醇厚。 缊，通“氤氲”，指阴阳二气相互交融。醇，醇厚。
+②男女：此处泛指世间万物之阴阳，故《集解》引干宝曰：“男女，犹阴阳也。”构：《正义》曰：“构，合也。”交合。
+【译文】
+天地二气交融在一起，则万物化育醇厚；阴阳精气交合，则万物化育生成。
+君子安其身而后动，易其心而后语①，定其交而后求。君子修此三者，故全也②。
+①易其心而后语：君子发言之时，当先平心静气。易，平和。
+②故全：于己、于人可以两全。
+【译文】君子先安定自身，然后才有所行动，先平和心情，然后才发表自己的言论，先稳定其所交往的友情然后才对朋友有所求助。君子能修养好这三种品行，所以于人于己才能两全。
+危以动，则民不与也；惧以语，则民不应也；无交而求，则民不与也；莫之与，则伤之者至矣①。
+①“危以动”以下几句：意谓人若冒危险行事， 恐惧而发言，又无所交谊却有所求，则人皆不帮助他。民，泛指百姓。与，帮助。
+【译文】
+若冒险采取行动，民众就不会给予帮助；在自己内心处于恐惧时发表言论，就不会得到民众的响应；平时不与民众交流，民众就不会予以帮助；没有人能给予帮助，那么伤害自己的人和事就会到来。
+夫《易》，彰往而察来，而微显阐幽，开而当名辨物，正言断辞则备矣①。其称名也小，其取类也大②。其旨远③，其辞文④，其言曲而中⑤，其事肆而隐⑥。因贰以济民行，以明失得之报⑦。
+①开而当名辨物，正言断辞则备矣：名、物、言、辞，均指卦爻辞中所具备的内容。
+②其称名也小，其取类也大：《周易》常常举小事物以比喻大事物，如《正义》所言：“言虽是小物，而比喻大事，是所取义类而广大也。”称名，举事物之名而言之。取类，取类似之事物以为喻。
+③旨远：近说此物，远指彼事，其旨意深远。
+④辞文：不直言所论之事，而以辞文饰其言。
+⑤言曲而中：言辞委婉曲折，变化有致，但能切中其理。中，指言辞符合事实，如射箭，射在“正中”。
+⑥其事肆而隐：言辞放肆显露，而义理则深刻幽隐。肆，直露。《集解》引虞翻曰：“肆，直也。”此上几句意在说明《周易》卦爻辞的语言特色。
+⑦因贰以济民行，以明失得之报：《周易》是通过阴阳符号的组合方式和变化特征来象征事物发展的规律，通过这些规律预知吉凶，则可以避凶而趋吉，并进而明得失之报，故能济民行事。因，依靠。
+贰，指阴阳之道，吉凶之理。
+【译文】
+《周易》能彰显以往的事情并察觉未来之事，显示细微之事而阐明幽隐之事，作《易》者以开释卦爻之义来正卦爻之名而辨别物类，端正言辞，判断卦爻辞义，则天下的道理就全部具备了。其卦爻辞所称述的物名虽然小，但是它们象征的事类却很大。其意旨深远，其言辞有文采，其语言虽然委婉曲折而切中事理，其言辞放肆直白而所论义理幽深。用吉凶之兆中蕴涵的道理来帮助百姓的行动，揭示吉凶得失的应验。
+《易》之兴也，其于中古乎①？作《易》者，其有忧患乎 ②？是故《履》，德之基也③；《谦》，德之柄也④；《复》，德之本也⑤；《恒》，德之固也⑥；《损》，德之修也⑦；《益》，德之裕也⑧；《困》，德之辨也⑨；《井》，德之地也⑩；《巽》，德之制也⑪。《履》和而至⑫，《谦》尊而光⑬，《复》小而辨于物⑭，《恒》杂而不厌⑮，《损》先难而后易⑯，《益》长裕而不设⑰，《困》穷而通⑱，《井》居其所而迁⑲，《巽》称
+而隐⑳。《履》以和行 ，《谦》以制礼 ，《复》以自知
+，《恒》以一德 ，《损》以远害 ，《益》以兴利 ，
+《困》以寡怨 ，《井》以辩义 ，《巽》以行权 。
+①《易》之兴也，其于中古乎：此言《周易》创作于中古时代。兴，兴起。中古，指《周易》创作时代。历来有二说：一是以伏羲氏为作者，以其所处的时代为中古，以天为上古，以黄帝、尧、舜为后世。二是以伏羲氏为上古，以文王之世为中古，孔子为下古。因《系辞》后有“《易》之兴也，其当殷之末世，周之盛德邪？当文王与纣之事邪”，故以后说为是。当然，《系辞》作者在认为《易经》成书可能在文王之时，但亦未敢肯定，故后 有疑问语气词“邪”。
+②作《易》者，其有忧患乎：因《周易》中颇多危辞和劝诫之语，故《系辞》作者认为文王作《周易》卦爻辞时， 有忧国忧民之心。司马迁所谓“文王拘而演《周易》”，大略也是此意。 ③是故《履》，德之基也：《序卦》曰：“履者，礼也。”《系辞》作者认为《履》的意义是履行礼义。《履》之《象传》曰：“君子以辩上下，定民志。”辩上下，就是辨别上下等级之礼。德以礼为基础，仁、义、忠、信等道德皆建筑在礼仪之上，故曰“德之基”。
+④《谦》，德之柄也：《谦》卦象征着谦虚，《系辞》作者认为人谦虚始能执德，骄傲则必失德，故《谦》为德之柄。柄，权柄。
+⑤《复》，德之本也：《复》卦以“一阳来复”象征着回复正道。前文释《复》初九爻辞“不远复”曰：“有不善未尝不知，知之未尝复行也。”知不善而不重复不善，就等于返归善道，始能有德，故《复》为德之本。
+⑥《恒》，德之固也：《恒》卦象征着永恒，以恒心守持正道、德操，久而不易，故内秉恒心，其德操才能坚固。
+⑦《损》，德之修也：《损》卦象征着自我减损其不善，《损》的义理就是人需减损其之恶念与过错，如《损》之《象传》所言“君子以惩忿窒欲”，才能修养道德。修，修养。
+⑧《益》，德之裕也：《益》卦象征着增益，《系辞》作者认为《益》启发人们增益其善念与美行。《益》之《象传》曰“君子以见善则迁，有过则改”，略同此说。因为人只有在增益善念与美行之后，才能扩充其德，故曰《益》为德之裕。裕，充裕，扩充。
+⑨《困》，德之辨也：《困》卦象征着人处于穷困之境，《困》之《象传》曰：“君子以致命遂志。”就是说君子穷困，虽死也不愿屈其志。孔子所谓：“君子固穷，小人穷斯滥矣。”故能否在困穷中坚守其正道，是辨别一个人是否有德的分水岭，故曰《困》为德之辨。
+⑩《井》，德之地也：《井》卦象征着“井水养人”，《井》之《彖传》曰：“井养而不穷也。”井能以水养人，则为君子居德之处所。《集解》引姚信曰：“井养而不穷，德居地也。”
+⑪《巽》，德之制也：《巽》卦象征着“号令”，巽以九五之中正，申明号令，以示法制，故能为德之制度。
+⑫《履》和而至：履，礼。和，不争。至，达到。《礼记·乐记》曰：“礼至则不争。”也是此义。
+⑬《谦》尊而光：《谦》之《彖传》曰“天道下济而光明”，若人能谦卑，则其德更为尊崇、光明。 ⑭《复》小而辨于物：《复》之卦象是一阳回复，始见于初，故曰“小”。《复》于细微初小之时，就能辨物之吉凶，故能速归于善道。
+⑮《恒》杂而不厌：杂指风雷相杂，阴阳相交，然《恒》之道在长久，故虽杂而不厌。
+⑯《损》先难而后易：《损》之道在自损其恶而获益于后，自损则“先难”，获益则“后易”。《正义》曰：“先自减损，是先难也。后乃无患，是后易也。”
+⑰《益》长裕而不设：《益》有德之裕，故不虚设其法，而能宽裕长养于物。设，设置。《说文》曰：“设，施陈也。”
+⑱《困》穷而通：穷则变，变则通。韩康伯注曰：“处穷而不屈其道也。”朱熹曰：“身困而道亨。”亨即亨通。
+⑲《井》居其所而迁：井永居其处，而井水则可迁移以养人。此喻人居于其位，而能施德于人。《正义》曰：“言《井》卦居得其所，恒住不移，而能迁其润泽，施惠于外也。”
+⑳《巽》称而隐：《说卦》曰“巽为风”“巽为入”，风有其入，而不见其入；风见其扬，而不显其身。此象征着君子敢于申命，又不彰显自己。称，扬。而，犹言“且”。隐，隐藏。
+ 《履》以和行：人有利害矛盾，皆循礼而行，则其行能和而不争，如《论语》所言“礼之用，和为贵”，故曰“《履》以和行。”
+ 《谦》以制礼：《谦》象为一阳制五阴，五阴顺从谓“礼”，一阳制约为“制”。
+ 《复》以自知：有不善而能自知，则必能返归于善道。自知，犹言“自觉”。
+ 《恒》以一德：此言《恒》之道不二三其德而在于始终如一。
+ 《损》以远害：《损》卦的要义在于提醒人们减损其恶念过错，若如此则必能远害。
+ 《益》以兴利：《益》是增益其善念美行，若如此则能兴利益善。
+ 《困》以寡怨：此言困而不为非义之事，则怨者也少。 《井》以辩义：井水养人，损己以利人，故曰“义”。而辨别义与非义，当以井德为准，故曰“井以辩义”。
+ 《巽》以行权：巽为入、为风，又象征着文教宣化之事，政令如风传播于民间，才能执权行政。
+【译文】
+《周易》的兴起，大概在殷商之末的中古时代吧？创作《周易》的人，大概是心 忧患吧？所以《履》卦是树立道德的基础，《谦》卦是实行道德的权柄，《复》卦是遵循道德的根本，《恒》卦是巩固道德的前提，《损》卦是修养道德的方法，《益》卦是充裕道德的途径，《困》卦是辨别道德的标准，《井》卦是聚集道德的处所，《巽》卦是展示道德的规范。《履》卦教人平和而能履礼，《谦》卦教人谦虚才能受到尊崇而光明其德，《复》卦教人返归善道要从小的征兆去辨析事物的善恶，《恒》卦教人在邪正相杂的环境中坚守德操而不厌倦，《损》卦教人先以修身为难事才能达到获益的平易之境界，《益》卦教人长久地充裕其德行而不虚设其“益”名，《困》卦教人在困穷时要守正才能得到亨通，《井》卦教人居得其所广施润泽之惠于外，《巽》卦教人顺势称扬号令而不要彰显自己。《履》卦启发人们保持平和的言行，《谦》卦启发人们以礼节约束自己，《复》卦启发人们要自知其得失之道，《恒》卦启示人们要始终如一地坚守其美德，《损》卦启示人们要减损其恶念以远远地避开祸害，《益》卦启示人们要增益其美德善行以兴起利益，《困》卦启示人们要在困穷时减少报怨，《井》卦启示人们要辨别什么是真正的仁义，《巽》卦启示人们要顺时、顺势地行使权力。
+《易》之为书也，不可远①，为道也屡迁，变动不居，周流六虚②，上下无常，刚柔相易，不可为典要，唯变所适③。
+①《易》之为书也，不可远：此谓《周易》包含有天地万物之理，对人生有着切实的指导意义，故不能远离它。
+②变动不居，周流六虚：谓爻之变动不固定于一位，而周流于六位，六爻皆可变。不居，犹言“不停”。六虚，韩注：“六虚，六位也。”指卦中的六爻之位。《正义》曰：“‘虚’者，位本无体，因爻始见，故称‘虚’也。” ③“上下无常”以下几句：谓六爻之变或在上位，或在下位，刚爻并不常为“刚”，柔爻也不常为“柔”，或刚变为柔，或柔变为刚，常常是相互变易，故不可为经常之纲要。而六爻之动，刚柔相易，或远而应，或近而比，唯变爻所适，故曰“唯变所适”。常，经常。易，变易。典，《尔雅·释言》：“典，经也。”又《释诂》：
+“典，常也。”典要，即典常纲要。适，适宜。
+【译文】
+《周易》这本书，人们不应该须臾远离，其中所体现的道理不断运动着，变动而不固定于一时一处，循环往复于六爻之间，或往上或往下并无常规可寻，阳刚与阴柔也相互变易，我们不应视它为典常纲要，只有在变动中求其适宜的方法。
+《易》之为书也，广大悉备。有天道焉，有人道焉，有地道焉。
+【译文】
+《周易》这本书，广泛博大，万事俱备于其中。其中含有天的道理，含有人的道理，也有地的道理。
+危者使平，易者使倾①。其道甚大，百物不废。惧以终始，其要无咎，此之谓《易》之道也②。
+①危者使平，易者使倾：谓自以为危险者，可能会平安，而自以为平安者，可能会导致倾覆。知惧则可获得平安之吉，不知惧则可能引来倾覆之危。易，平易。倾，倾覆。
+②“惧以终始”以下几句：《易传》的作者认为只有始终 有警惧之心，慎守正道以求其“无咎”，才是《易》道的真谛。以，犹言
+“于”。
+【译文】
+知道危险的存在就能使人平安，而自以为平安而怠慢疏忽就将导致倾覆。此中包含的道理是很广大的，一切事物都不能除外。若人自始至终都能保持警惧之心，那么，做起事来大体上就“没有过失”，这就是所谓《周易》的真谛。
+夫乾，天下之至健也，德行恒易以知险①。夫坤，天下之至顺也，德行恒简以知阻②。
+①“夫乾”以下几句：谓天创始万物，是宇宙中 为刚健的事物，然因其有正常之规律，其运行之道平易，故可以预知其艰难险阻。天险有久旱、久雨、暴雪、狂风等，皆因其“恒易”而能知。此句应与《系辞上》的“乾以易知”联系起来看。
+②“夫坤”以下几句：谓地顺承天道以养万物，是宇宙中 为柔顺的事物，因其有正常之规律，其德行常是简约的。坤之德行，恒为简易至静，心中没有烦乱，所以能知其阻碍。《正义》曰：“大难曰险，乾以刚健，故知其大难；小难曰阻，坤以柔顺，故知其小难。” 然地虽简易也有高山、峻岭、大川、巨泽，因简易而知其阻。
+【译文】
+乾，是天下 为刚健的象征，因为有正常的规律，其德行常常平易而又能在平易中预知危险的因素。坤，是天下 为柔顺的象征，其德行常常简易并能在简易中预知前面可能存在的阻碍。
+将叛者其辞惭，中心疑者其辞枝，吉人之辞寡，躁人之辞多，诬善之人其辞游，失其守者其辞屈。
+【译文】
+将有叛逆之心的人其言辞必然是惭愧不安的，内心有所疑惧的人其言辞必定是散乱无章的，贤美吉善的人言辞少，浮躁轻薄的人言辞多，诬蔑善良的人言辞浮泛虚妄，失去操守的人言辞邪曲不正。
+说卦
+和顺于道德而理于义，穷理尽性以至于命①。
+①穷理尽性以至于命：天地万物各有其理，各有其性，各有其命，作《易》者穷究万物之理及其性质，然后才能通达万物运动变化的规律性。穷，穷究，极尽。性，性质。命，天命，即自然规律。
+【译文】
+和谐顺从圣人的道德并以适宜的方法有条有理地阐明意义，穷极万物深妙之理，究尽生灵所禀的特性以至于通达天下万物运动的规律性。
+立天之道曰阴与阳，立地之道曰柔与刚，立人之道曰仁与义。
+【译文】
+确立天的道理有“阴”有“阳”，确立地的道理有“刚”有
+“柔”，确立人的道理有“仁”有“义”。
+序卦
+有天地然后有万物，有万物然后有男女，有男女然后有夫妇，有夫妇然后有父子，有父子然后有君臣，有君臣然后有上下，有上下然后礼义有所错。
+【译文】
+有了天地然后才有万物，有了万物后才有男人女人，有了男人女人然后才能配成夫妇，有了夫妇繁衍后代才有了父子之序，有了父子之序然后才有了君臣关系，有了君臣关系然后才有了上下之别，有了上下之别然后才有实行礼义的地方。
