--- a/_posts/2022-12-27-读《资治通鉴》札记（十）.md
+++ b/_posts/2022-12-27-读《资治通鉴》札记（十）.md
@@ -58,9 +58,7 @@ date: 2022-12-27 15:43:01
 
 > 楚数侵夺汉甬道，汉军乏食。汉王与郦食其谋桡楚权，食其建议汉王立六国之后。食其未行，张良从外来谒。曰：“今复立六国之后，天下游士各归事其主，从其亲戚，反其故旧、坟墓，陛下与谁取天下乎？！”因此刘邦取消了立流过之后的想法。
 
-> 汉王谓陈平曰：“天下纷纷，何时定乎？”陈平曰：“大王诚能捐数万斤金，行反间，间其君臣，以疑其心。项王为人，意忌信谗，必内相诛，汉因举兵而攻之，破楚必矣。”汉王曰：“善！”乃出黄金四万斤与平，恣所为，不问其出入。平多以金纵反间于楚军，项王果意不信钟离昩等。
-
-> 夏，四月，楚围汉王于荥阳，汉王请和，割荥阳以西者为汉。亚父劝羽急攻荥阳。项羽使使至汉，陈平使为太牢具。举进，见楚使，即佯惊曰：“吾以为亚父使，乃项王使！”果然亚父为项羽所疑，未至彭城，疽发背而死。五月，将军纪信言于汉王曰：“事急矣！臣请诳楚，王可以间出。”于是陈平夜出女子东门二千馀人，楚因而四面击之。纪信乃乘王车，黄屋左纛，曰：“食尽，汉王降楚。”楚皆呼万岁，之城东观。以故汉王得与数十骑出西门遁去，令韩王信与周苛、魏豹、枞公守荥阳。羽见纪信，问：“汉王安在？”曰：“已出去矣。”羽烧杀信。汉王出荥阳，至成皋，入关，收兵欲复东。
+> 汉王谓陈平曰：“天下纷纷，何时定乎？”陈平曰：“大王诚能捐数万斤金，行反间，间其君臣，以疑其心。项王为人，意忌信谗，必内相诛，汉因举兵而攻之，破楚必矣。”汉王曰：“善！”乃出黄金四万斤与平，恣所为，不问其出入。平多以金纵反间于楚军，项王果意不信钟离昩等。夏，四月，楚围汉王于荥阳，汉王请和，割荥阳以西者为汉。亚父劝羽急攻荥阳。项羽使使至汉，陈平使为太牢具。举进，见楚使，即佯惊曰：“吾以为亚父使，乃项王使！”果然亚父为项羽所疑，未至彭城，疽发背而死。五月，将军纪信言于汉王曰：“事急矣！臣请诳楚，王可以间出。”于是陈平夜出女子东门二千馀人，楚因而四面击之。纪信乃乘王车，黄屋左纛，曰：“食尽，汉王降楚。”楚皆呼万岁，之城东观。以故汉王得与数十骑出西门遁去，令韩王信与周苛、魏豹、枞公守荥阳。羽见纪信，问：“汉王安在？”曰：“已出去矣。”羽烧杀信。汉王出荥阳，至成皋，入关，收兵欲复东。
 
 > 汉王之败彭城，解而西也，彭越皆亡其所下城，独将其兵北居河上，常往来为汉游兵击楚，绝其后粮。是月，彭越渡睢，与项声、薛公战下邳，破，杀薛公。羽乃使终公守成皋，而自东击彭越。汉王引兵北，击破终公，复军成皋。
 
